--- a/index.html
+++ b/index.html
@@ -3,11 +3,179 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <link rel="stylesheet" href="Base.css">
+    <link rel="stylesheet" href="Style1.css">
+    <link rel="stylesheet" href="Animation.css">
+    <title>QuentinCharnay</title>
 </head>
 <body>
+    <div class="header">
+        <h2>Quentin Charnay</h2>
+    </div>
+    <div class="content">
+        <h2>Quentin Charnay</h2>
 
-    <p>Hello World</p>
+        <p> </p><br>
+        <p> </p><br>
+
+        <h2>Présentation</h2>
+        <img class="image2droite" src="images/FuséeTest.jpg">
+        <p>
+            Je m'appelle Quentin Charnay,azezaeazeazeaze<br>
+            azeazeazeazeazeazeaz<br>
+            zaeazeazeazeaze<br>
+            azeazeazeazeazeazeazeazeaz<br>
+            eazazezaeaz<br>
+            zaeazeazeazeazezae<br>
+
+            azeazeazeazeazeazeazeazeaz<br>
+            zeaezaezaazeazeazeaz<br>
+
+
+            eazeazeazeazeaz<br>
+            eazazezaeaz<br>
+            azeazeazeazeazeazeaz<br>
+            zaeazeazeazeaze<br>
+            azeazeazeazeazeazeazeazeaz<br>
+            eazazezaeaz<br>
+            zaeazeazeazeazezae<br>
+
+            azeazeazeazeazeazeazeazeaz<br>
+            zeaezaezaazeazeazeaz<br>
+
+
+            eazeazeazeazeaz<br>
+            eazazezaeaz<br>
+            azeazeazeazeazeazeaz<br>
+            zaeazeazeazeaze<br>
+            azeazeazeazeazeazeazeazeaz<br>
+            eazazezaeaz<br>
+            zaeazeazeazeazezae<br>
+
+            azeazeazeazeazeazeazeazeaz<br>
+            zeaezaezaazeazeazeaz<br>
+
+
+            eazeazeazeazeaz<br>
+            eazazezaeaz<br>
+        </p><br>
+
+
+    </div>
+
+    <div class="content2">
+        <h2>Projets</h2>
+        <img class="image2gauche" src="images/Planète.png">
+        <p>
+            Je m'appelle Quentin Charnay,azezaeazeazeaze<br>
+            azeazeazeazeazeazeaz<br>
+            zaeazeazeazeaze<br>
+            azeazeazeazeazeazeazeazeaz<br>
+            eazazezaeaz<br>
+            zaeazeazeazeazezae<br>
+
+            azeazeazeazeazeazeazeazeaz<br>
+            zeaezaezaazeazeazeaz<br>
+
+
+            eazeazeazeazeaz<br>
+            eazazezaeaz<br>
+            azeazeazeazeazeazeaz<br>
+            zaeazeazeazeaze<br>
+            azeazeazeazeazeazeazeazeaz<br>
+            eazazezaeaz<br>
+            zaeazeazeazeazezae<br>
+
+            azeazeazeazeazeazeazeazeaz<br>
+            zeaezaezaazeazeazeaz<br>
+
+
+            eazeazeazeazeaz<br>
+            eazazezaeaz<br>
+            azeazeazeazeazeazeaz<br>
+            zaeazeazeazeaze<br>
+            azeazeazeazeazeazeazeazeaz<br>
+            eazazezaeaz<br>
+            zaeazeazeazeazezae<br>
+
+            azeazeazeazeazeazeazeazeaz<br>
+            zeaezaezaazeazeazeaz<br>
+
+
+            eazeazeazeazeaz<br>
+            eazazezaeaz<br>
+        </p><br>
+
+    </div>
+
+    <div class="content">
+        <h2>Prestation</h2>
+        <img class="image2droite" src="images/FuséeTest.jpg">
+        <p>
+            Je m'appelle Quentin Charnay,azezaeazeazeaze<br>
+            azeazeazeazeazeazeaz<br>
+            zaeazeazeazeaze<br>
+            azeazeazeazeazeazeazeazeaz<br>
+            eazazezaeaz<br>
+            zaeazeazeazeazezae<br>
+
+            azeazeazeazeazeazeazeazeaz<br>
+            zeaezaezaazeazeazeaz<br>
+
+
+            eazeazeazeazeaz<br>
+            eazazezaeaz<br>
+            azeazeazeazeazeazeaz<br>
+            zaeazeazeazeaze<br>
+            azeazeazeazeazeazeazeazeaz<br>
+            eazazezaeaz<br>
+            zaeazeazeazeazezae<br>
+
+            azeazeazeazeazeazeazeazeaz<br>
+            zeaezaezaazeazeazeaz<br>
+
+
+            eazeazeazeazeaz<br>
+            eazazezaeaz<br>
+            azeazeazeazeazeazeaz<br>
+            zaeazeazeazeaze<br>
+            azeazeazeazeazeazeazeazeaz<br>
+            eazazezaeaz<br>
+            zaeazeazeazeazezae<br>
+
+            azeazeazeazeazeazeazeazeaz<br>
+            zeaezaezaazeazeazeaz<br>
+
+
+            eazeazeazeazeaz<br>
+            eazazezaeaz<br>
+        </p><br>
+
+    </div>
+
+    <div class="map">
+        <h2>Projects</h2>
+        <img class="ImageCentre floating" src="images/Planète.png">
+        <img class="satellite" src="images/Planète.png">
+    </div>
+
+
+    <p></p>
+
+
+    </div>
+    <div class="footer">
+        <div>
+            <h3>quentincharnay78@orange.fr</h3>
+            <h3>+33 0785688676</h3>
+            <h3>France</h3>
+        </div>
+        <div>
+            <a href="https://www.instagram.com/batimentabandone/"><img src="images/Linkedin.png" alt="Icone 4"></a>
+            <a href="https://www.instagram.com/batimentabandone/"><img src="images/Discord.png" alt="Icone 5"></a>
+            <a href="https://www.instagram.com/batimentabandone/"><img src="images/Insta.png" alt="Icone 6"></a>
+        </div>
+    </div>
 
 </body>
 </html>
