--- a/index.html
+++ b/index.html
@@ -154,9 +154,12 @@
     </div>
 
     <div class="map">
-        <h2>Projects</h2>
-        <img class="ImageCentre floating" src="images/Planète.png">
-        <img class="satellite" src="images/Planète.png">
+        <center><img class="ImageCentre floating" src="images/Planète.png"></center>
+        <center><img class="satellite image-zoom" src="images/Sattellite.png"></center>
+        <center><img class="satellite image-zoom" src="images/Sattellite.png"></center>
+        <center><img class="satellite image-zoom" src="images/Sattellite.png"></center>
+        <center><img class="satellite image-zoom" src="images/Sattellite.png"></center>
+        <center><img class="satellite image-zoom" src="images/Sattellite.png"></center>
     </div>
 
 
