--- a/index.html
+++ b/index.html
@@ -21,139 +21,54 @@
         <h2>Présentation</h2>
         <img class="image2droite" src="images/FuséeTest.jpg">
         <p>
-            Je m'appelle Quentin Charnay,azezaeazeazeaze<br>
-            azeazeazeazeazeazeaz<br>
-            zaeazeazeazeaze<br>
-            azeazeazeazeazeazeazeazeaz<br>
-            eazazezaeaz<br>
-            zaeazeazeazeazezae<br>
-
-            azeazeazeazeazeazeazeazeaz<br>
-            zeaezaezaazeazeazeaz<br>
-
-
-            eazeazeazeazeaz<br>
-            eazazezaeaz<br>
-            azeazeazeazeazeazeaz<br>
-            zaeazeazeazeaze<br>
-            azeazeazeazeazeazeazeazeaz<br>
-            eazazezaeaz<br>
-            zaeazeazeazeazezae<br>
-
-            azeazeazeazeazeazeazeazeaz<br>
-            zeaezaezaazeazeazeaz<br>
-
-
-            eazeazeazeazeaz<br>
-            eazazezaeaz<br>
-            azeazeazeazeazeazeaz<br>
-            zaeazeazeazeaze<br>
-            azeazeazeazeazeazeazeazeaz<br>
-            eazazezaeaz<br>
-            zaeazeazeazeazezae<br>
-
-            azeazeazeazeazeazeazeazeaz<br>
-            zeaezaezaazeazeazeaz<br>
-
-
-            eazeazeazeazeaz<br>
-            eazazezaeaz<br>
+            Je m’appelle Quentin Charnay. <br />
+            <br />
+            Né à Versailles et jai grandi dans les Yvelines. <br />
+            En 2023, je suis monté à Villeneuve-d’Ascq, en périphérie <br />
+            de Lille, pour y poursuivre mes études. J’ai quitté <br />
+            le lycée Émilie de Breteuil avec un baccalauréat général <br />
+            euro anglais, décrochant au passage la mention très bien. <br />
+            Pour ensuite rejoint la prestigieuse école d’ingénieurs <br />
+            généraliste qu’est l’Institut Mines-Télécom Nord Europe, <br />
+            abrégé en <a href="https://imt-nord-europe.fr/">IMT</a>. C’est dans cette école issue de la fusion <br />
+            des réseaux des écoles des Mines et de Télécom que je  <br />
+            continue d’étudier les mathématiques, la physique, <br />
+            la chimie, l’informatique, l’économie et la gestion d’entreprise. <br />
         </p><br>
 
 
     </div>
 
     <div class="content2">
-        <h2>Projets</h2>
         <img class="image2gauche" src="images/Planète.png">
-        <p>
-            Je m'appelle Quentin Charnay,azezaeazeazeaze<br>
-            azeazeazeazeazeazeaz<br>
-            zaeazeazeazeaze<br>
-            azeazeazeazeazeazeazeazeaz<br>
-            eazazezaeaz<br>
-            zaeazeazeazeazezae<br>
-
-            azeazeazeazeazeazeazeazeaz<br>
-            zeaezaezaazeazeazeaz<br>
-
-
-            eazeazeazeazeaz<br>
-            eazazezaeaz<br>
-            azeazeazeazeazeazeaz<br>
-            zaeazeazeazeaze<br>
-            azeazeazeazeazeazeazeazeaz<br>
-            eazazezaeaz<br>
-            zaeazeazeazeazezae<br>
-
-            azeazeazeazeazeazeazeazeaz<br>
-            zeaezaezaazeazeazeaz<br>
-
-
-            eazeazeazeazeaz<br>
-            eazazezaeaz<br>
-            azeazeazeazeazeazeaz<br>
-            zaeazeazeazeaze<br>
-            azeazeazeazeazeazeazeazeaz<br>
-            eazazezaeaz<br>
-            zaeazeazeazeazezae<br>
-
-            azeazeazeazeazeazeazeazeaz<br>
-            zeaezaezaazeazeazeaz<br>
-
-
-            eazeazeazeazeaz<br>
-            eazazezaeaz<br>
-        </p><br>
+        <p2>
+            À côté de cela, je suis passionné par le sport, <br>
+            ayant pratiqué différents sports au fil des années, <br>
+            notamment le handball en club pendant près d’une décennie, <br>
+            ainsi que le badminton pendant six ans. Actuellement, <br>
+            je pratique l’escalade en bloc, le vélo, la course à pied <br>
+            et j’ai commencer le golf avec mon école. <br>
+        </p2>
 
     </div>
 
     <div class="content">
-        <h2>Prestation</h2>
         <img class="image2droite" src="images/FuséeTest.jpg">
         <p>
-            Je m'appelle Quentin Charnay,azezaeazeazeaze<br>
-            azeazeazeazeazeazeaz<br>
-            zaeazeazeazeaze<br>
-            azeazeazeazeazeazeazeazeaz<br>
-            eazazezaeaz<br>
-            zaeazeazeazeazezae<br>
-
-            azeazeazeazeazeazeazeazeaz<br>
-            zeaezaezaazeazeazeaz<br>
-
-
-            eazeazeazeazeaz<br>
-            eazazezaeaz<br>
-            azeazeazeazeazeazeaz<br>
-            zaeazeazeazeaze<br>
-            azeazeazeazeazeazeazeazeaz<br>
-            eazazezaeaz<br>
-            zaeazeazeazeazezae<br>
-
-            azeazeazeazeazeazeazeazeaz<br>
-            zeaezaezaazeazeazeaz<br>
-
-
-            eazeazeazeazeaz<br>
-            eazazezaeaz<br>
-            azeazeazeazeazeazeaz<br>
-            zaeazeazeazeaze<br>
-            azeazeazeazeazeazeazeazeaz<br>
-            eazazezaeaz<br>
-            zaeazeazeazeazezae<br>
-
-            azeazeazeazeazeazeazeazeaz<br>
-            zeaezaezaazeazeazeaz<br>
-
-
-            eazeazeazeazeaz<br>
-            eazazezaeaz<br>
+        Bien que je ne puisse pas qualifier cela de passe-temps <br>
+        en raison de leur irrégularité, j’adore aussi voyager et <br>
+        découvrir de nouvelles cultures. Les voyages les plus marquants <br>
+        pour moi ont été: La Guadeloupe (bien que française), c'était  <br>
+        première fois que je prenais l'avion. Malte (même si le voyage <br>
+        avait pour but de pratiquer l’anglais),mon premier voyage sans <br>
+        ma famille. Et pour finir le Maroc, voyage directement chez un <br>
+        ami ce fut mon plus grand et apriecé choque culturel. <br>
         </p><br>
 
     </div>
 
     <div class="map">
+        <h2>En dehors de mes activités académiques et sportives, je m’adonne à l’art exigeant de la programmation informatique, réalisant de nombreux projets, que je détaillerai ci dessous</h2>
         <center><img class="ImageCentre floating" src="images/Planète.png"></center>
         <center><img class="satellite image-zoom" src="images/Sattellite.png"></center>
         <center><img class="satellite image-zoom" src="images/Sattellite.png"></center>
