Updtae des gtexts
Yessay

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="Base.css">
     <link rel="stylesheet" href="Style1.css">
     <link rel="stylesheet" href="Animation.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <title>QuentinCharnay</title>
 </head>
 <body>
@@ -13,41 +16,72 @@
         <h2>Quentin Charnay</h2>
     </div>
     <div class="content">
-        <h2>Quentin Charnay</h2>
 
-        <p> </p><br>
-        <p> </p><br>
-
-        <h2>Présentation</h2>
         <img class="image2droite" src="images/FuséeTest.jpg">
         <p>
-            Je m’appelle Quentin Charnay. <br />
-            <br />
-            Né à Versailles et jai grandi dans les Yvelines. <br />
-            En 2023, je suis monté à Villeneuve-d’Ascq, en périphérie <br />
-            de Lille, pour y poursuivre mes études. J’ai quitté <br />
-            le lycée Émilie de Breteuil avec un baccalauréat général <br />
-            euro anglais, décrochant au passage la mention très bien. <br />
-            Pour ensuite rejoint la prestigieuse école d’ingénieurs <br />
-            généraliste qu’est l’Institut Mines-Télécom Nord Europe, <br />
-            abrégé en <a href="https://imt-nord-europe.fr/">IMT</a>. C’est dans cette école issue de la fusion <br />
-            des réseaux des écoles des Mines et de Télécom que je  <br />
-            continue d’étudier les mathématiques, la physique, <br />
-            la chimie, l’informatique, l’économie et la gestion d’entreprise. <br />
+            <br>
+            Je suis né à Versailles et j'ai grandi dans les Yvelines. <br>
+            En 2023, j'ai fait le choix de m'installer à <br>
+            Villeneuve-d'Ascq, en périphérie de Lille, pour poursuivre <br>
+            mes études. Mon parcours académique a commencé au lycée <br>
+            Émilie de Breteuil, où j'ai obtenu un baccalauréat général<br>
+            en Euro anglais avec mention très bien.<br>
+                                                   <br>
+            Après l'obtention de mon baccalauréat, j'ai rejoint <br>
+            l'Institut Mines-Télécom Nord Europe (<a href="https://imt-nord-europe.fr/">IMT</a>), <br>
+            une école d'ingénieurs de renom. Cette institution, issue <br>
+            de la fusion des réseaux des Mines et de Télécom, m'offre <br>
+            l'opportunité d'étudier un large éventail de disciplines,<br>
+            notamment les mathématiques, la physique, la chimie,<br>
+            l'informatique, l'économie et la gestion d'entreprise.<br>
+            <br>
+            Cette expérience éducative enrichissante a ouvert de<br>
+            nouvelles perspectives pour mon avenir. Je suis désireux<br>
+            d'explorer davantage ces domaines passionnants et de<br>
+            continuer à me développer académiquement à l'IMT, tout en<br>
+            élargissant mes horizons et en acquérant des compétences<br>
+            essentielles pour ma future carrière.<br>
         </p><br>
-
+        
 
     </div>
 
     <div class="content2">
         <img class="image2gauche" src="images/Planète.png">
         <p2>
-            À côté de cela, je suis passionné par le sport, <br>
-            ayant pratiqué différents sports au fil des années, <br>
-            notamment le handball en club pendant près d’une décennie, <br>
-            ainsi que le badminton pendant six ans. Actuellement, <br>
-            je pratique l’escalade en bloc, le vélo, la course à pied <br>
-            et j’ai commencer le golf avec mon école. <br>
+            En parallèle de mes études, une autre grande passion occupe <br>
+            une place importante dans ma vie : le sport. Au fil des années,<br>
+            j'ai exploré diverses disciplines, m'immergeant dans l'univers<br>
+            de la compétition et du bien-être physique. Le sport est pour <br>
+            moi bien plus qu'une simple activité, c'est un mode de vie.<br>
+            <br>
+            Mon voyage sportif a débuté il y a près d'une décennie avec<br>
+            le handball, que j'ai pratiqué en club. Cette expérience<br>
+            m'a appris l'importance de la coopération, du travail d'équipe<br>
+            et de la persévérance. Cela a été une source inestimable<br>
+            d'apprentissage, et j'ai de précieux souvenirs de ces années.<br>
+            <br>
+            Le badminton a également fait partie de mon parcours sportif,<br>
+            m'accompagnant pendant six années. Ce sport m'a permis de<br>
+            développer ma agilité et ma réactivité.<br>
+            <br>
+            Actuellement, je suis impliqué dans diverses activités<br>
+            sportives. L'escalade en bloc est devenue une véritable<br>
+            passion, me permettant de repousser mes limites physiques et<br>
+            mentales tout en développant ma force et mon équilibre.<br>
+            Le vélo et la course à pied sont pour moi des moyens de me<br>
+            ressourcer, de rester actif et en bonne santé.<br>
+            <br>
+            De plus, je me suis récemment initié au golf grâce à mon école.<br>
+            Ce sport exige précision, concentration et maîtrise de soi,<br>
+            des compétences que je suis enthousiaste à développer.<br>
+            <br>
+            Le sport est un élément essentiel de mon équilibre de vie,<br>
+            m'apportant joie, défi et bien-être. Mon engagement dans ces<br>
+            différentes disciplines reflète ma quête constante d'amélioration<br>
+            personnelle, que ce soit sur le terrain, sur le mur d'escalade ou<br>
+            sur le parcours de golf. C'est un complément précieux à mon<br>
+            parcours académique et professionnel.<br>
         </p2>
 
     </div>
@@ -60,7 +94,7 @@
         découvrir de nouvelles cultures. Les voyages les plus marquants <br>
         pour moi ont été: La Guadeloupe (bien que française), c'était  <br>
         première fois que je prenais l'avion. Malte (même si le voyage <br>
-        avait pour but de pratiquer l’anglais),mon premier voyage sans <br>
+        avait pour but de pratiquer l’anglais), mon premier voyage sans <br>
         ma famille. Et pour finir le Maroc, voyage directement chez un <br>
         ami ce fut mon plus grand et apriecé choque culturel. <br>
         </p><br>
@@ -69,6 +103,7 @@
 
     <div class="map">
         <h2>En dehors de mes activités académiques et sportives, je m’adonne à l’art exigeant de la programmation informatique, réalisant de nombreux projets, que je détaillerai ci dessous</h2>
+        
         <center><img class="ImageCentre floating" src="images/Planète.png"></center>
         <center><img class="satellite image-zoom" src="images/Sattellite.png"></center>
         <center><img class="satellite image-zoom" src="images/Sattellite.png"></center>
