--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     </div>
     <div class="content">
 
-        <img class="image2droite" src="images/FuséeTest.jpg">
+        <img class="image2droite" src="images/Insta.png">
         <p>
-            <br>
+            <br><br><br>
             Je suis né à Versailles et j'ai grandi dans les Yvelines. <br>
             En 2023, j'ai fait le choix de m'installer à <br>
             Villeneuve-d'Ascq, en périphérie de Lille, pour poursuivre <br>
@@ -41,7 +41,7 @@
             continuer à me développer académiquement à l'IMT, tout en<br>
             élargissant mes horizons et en acquérant des compétences<br>
             essentielles pour ma future carrière.<br>
-        </p><br>
+        </p>
         
 
     </div>
@@ -81,23 +81,44 @@
             différentes disciplines reflète ma quête constante d'amélioration<br>
             personnelle, que ce soit sur le terrain, sur le mur d'escalade ou<br>
             sur le parcours de golf. C'est un complément précieux à mon<br>
-            parcours académique et professionnel.<br>
+            parcours académique et professionnel.
         </p2>
 
     </div>
 
     <div class="content">
-        <img class="image2droite" src="images/FuséeTest.jpg">
+        <img class="image2droite" src="images/taupe.png">
         <p>
-        Bien que je ne puisse pas qualifier cela de passe-temps <br>
-        en raison de leur irrégularité, j’adore aussi voyager et <br>
-        découvrir de nouvelles cultures. Les voyages les plus marquants <br>
-        pour moi ont été: La Guadeloupe (bien que française), c'était  <br>
-        première fois que je prenais l'avion. Malte (même si le voyage <br>
-        avait pour but de pratiquer l’anglais), mon premier voyage sans <br>
-        ma famille. Et pour finir le Maroc, voyage directement chez un <br>
-        ami ce fut mon plus grand et apriecé choque culturel. <br>
-        </p><br>
+            Bien que je ne puisse pas considérer cela comme un <br>
+            passe-temps en raison de sa nature irrégulière, ma passion <br>
+            pour les voyages et la découverte de nouvelles cultures est <br>
+            une part essentielle de ma vie. Chaque aventure dans un endroit <br>
+            inconnu élargit mes horizons et nourrit ma soif de connaissances. <br>
+            <br>
+            Parmi tous les voyages mémorables que j'ai eu la chance de réaliser,<br>
+            trois se détachent particulièrement. Mon tout premier vol m'a <br>
+            conduit vers la Guadeloupe, même si elle fait partie du <br>
+            territoire français ce fut un grands dépaisement.<br>
+            <br>
+            Malte, bien que motivé par un désir d'améliorer ma maîtrise <br>
+            de l'anglais, a été le théâtre de ma première expérience en <br>
+            voyageant en dehors du cocon familial. Cela a renforcé mon <br>
+            indépendance et ma confiance en moi tout en m'offrant un aperçu <br>
+            fascinant de la culture maltaise.<br>
+            <br>
+            Enfin, mon voyage au Maroc a été inoubliable. J'ai eu <br>
+            l'opportunité de séjourner directement chez un ami, ce qui <br>
+            m'a permis de vivre une immersion totale dans la culture marocaine.<br>
+            Ce fut un choc culturel à la fois inspirant et formateur, <br>
+            qui a élargi mes horizons et renforcé ma compréhension <br>
+            des coutumes et des traditions locales.<br>
+            <br>
+            Ces expériences de voyage ont été autant d'occasions d'apprentissage,<br>
+            de remise en question, et de découverte. Elles ont renforcé<br>
+            ma passion pour l'exploration du monde et la compréhension<br>
+            des différentes cultures qui le composent, et je suis impatient de<br>
+            poursuivre cette aventure passionnante.
+        </p>
 
     </div>
 
@@ -112,11 +133,6 @@
         <center><img class="satellite image-zoom" src="images/Sattellite.png"></center>
     </div>
 
-
-    <p></p>
-
-
-    </div>
     <div class="footer">
         <div>
             <h3>quentincharnay78@orange.fr</h3>
