--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <div class="header">
         <h2>Quentin Charnay</h2>
     </div>
-    <div class="content">
 
-        <img class="image2droite" src="images/Insta.png">
-        <p>
+    <div class="content fade">
+        <img class="image2droite SlideInRight" src="images/IMT.png">
+        <p class="SlideInLeft">
             <br><br><br>
             Je suis né à Versailles et j'ai grandi dans les Yvelines. <br>
             En 2023, j'ai fait le choix de m'installer à <br>
@@ -26,7 +26,7 @@
             mes études. Mon parcours académique a commencé au lycée <br>
             Émilie de Breteuil, où j'ai obtenu un baccalauréat général<br>
             en Euro anglais avec mention très bien.<br>
-                                                   <br>
+            <br>
             Après l'obtention de mon baccalauréat, j'ai rejoint <br>
             l'Institut Mines-Télécom Nord Europe (<a href="https://imt-nord-europe.fr/">IMT</a>), <br>
             une école d'ingénieurs de renom. Cette institution, issue <br>
@@ -42,13 +42,14 @@
             élargissant mes horizons et en acquérant des compétences<br>
             essentielles pour ma future carrière.<br>
         </p>
-        
 
     </div>
 
-    <div class="content2">
-        <img class="image2gauche" src="images/Planète.png">
-        <p2>
+
+
+    <div class="content2 fade">
+        <img class="image2gauche SlideInLeft" src="images/course.jpg">
+        <p2 class="SlideInRight">
             En parallèle de mes études, une autre grande passion occupe <br>
             une place importante dans ma vie : le sport. Au fil des années,<br>
             j'ai exploré diverses disciplines, m'immergeant dans l'univers<br>
@@ -81,14 +82,15 @@
             différentes disciplines reflète ma quête constante d'amélioration<br>
             personnelle, que ce soit sur le terrain, sur le mur d'escalade ou<br>
             sur le parcours de golf. C'est un complément précieux à mon<br>
-            parcours académique et professionnel.
+            parcours académique et professionnel.<br>
         </p2>
-
     </div>
 
-    <div class="content">
-        <img class="image2droite" src="images/taupe.png">
-        <p>
+
+
+    <div class="content fade">
+        <img class="image2droite SlideInRight" src="images/voyage.jpg">
+        <p class="SlideInLeft">
             Bien que je ne puisse pas considérer cela comme un <br>
             passe-temps en raison de sa nature irrégulière, ma passion <br>
             pour les voyages et la découverte de nouvelles cultures est <br>
@@ -124,7 +126,7 @@
 
     <div class="map">
         <h2>En dehors de mes activités académiques et sportives, je m’adonne à l’art exigeant de la programmation informatique, réalisant de nombreux projets, que je détaillerai ci dessous</h2>
-        
+
         <center><img class="ImageCentre floating" src="images/Planète.png"></center>
         <center><img class="satellite image-zoom" src="images/Sattellite.png"></center>
         <center><img class="satellite image-zoom" src="images/Sattellite.png"></center>
